--- a/VideoTube/VideoTube/WebContent/registerForm.html
+++ b/VideoTube/VideoTube/WebContent/registerForm.html
@@ -73,7 +73,7 @@ License URL: http://crea0tivecommons.org/licenses/by/3.0/
 		
 				<div class="main-login main-center">
 				
-					<form class="form-horizontal" method="POST" action="RegisterServlet">
+					<form class="form-horizontal"  action="../RegisterServlet" method="POST">
 						
 						<div class="form-group">
 							<label for="name" class="cols-sm-2 control-label">Username</label>
